--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
 .index {
   display: flex;
   justify-content: center;
+  border: 1px solid red;
 }
 
 .index * {
@@ -26,6 +27,14 @@ body {
   text-align: center;
   font-size: 20px;
   line-height: 70px;
+  border: 1px solid blue;
+}
+
+.index *:hover {
+  height: 75px;
+  width: 75px;
+  margin: 10 5;
+  margin-bottom: 35px;
 }
 
 .blue-box {
